# AssignmentPacker

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
Formula/: ap.rb
aur/: .SRCINFO  PKGBUILD
bucket/: ap.json
choco/: ap.0.1.0.nupkg  ap.nuspec
choco/tools/: chocolateyinstall.ps1
deb/: build-deb.sh
manifests/c/cat-forgor/ap/0.1.0/: cat-forgor.ap.installer.yaml  cat-forgor.ap.locale.en-US.yaml  cat-forgor.ap.yaml
src/: cli.rs  compiler.rs  config.rs  error.rs  fs.rs  main.rs  pack.rs  rtf.rs  screenshot.rs  theme.rs  ui.rs  update.rs  validate.rs
src/config/: commands.rs  editor.rs  mod.rs
src/render/: mod.rs  rtf.rs  screenshot.rs  theme.rs
src/terminal/: capture.rs  emulate.rs  exec.rs  format.rs  mod.rs
wix/: main.wxs
