[package]
name = "assignment_packer"
version = "1.0.1"
edition = "2024"
description = "Packs C assignment submissions for Canvas upload"
license = "MIT"
repository = "https://github.com/cat-forgor/AssignmentPacker"
keywords = ["assignment", "canvas", "catforgor"]
categories = ["command-line-utilities"]
autobins = false

[[bin]]
name = "ap"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
dirs = "6.0.0"
owo-colors = "4"
font8x8 = "0.3.1"
image = { version = "0.25.5", default-features = false, features = ["png"] }
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2"
toml = "0.9.8"
walkdir = "2.5.0"
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }
shlex = "1.3.0"
ab_glyph = "0.2"
ureq = "3"
portable-pty = "0.9.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
